--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://pages.github.ncsu.edu/doneill/test-websockets/iiif-annotation.js"></script>
-<link rel="stylesheet" type="text/css" href="http://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.css">
+<link rel="stylesheet" type="text/css" href="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.css">
     </head>
     <body>        
     
