--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="https://pages.github.ncsu.edu/doneill/test-websockets/dist/js/iiif-annotation.js"></script>
+        <script src="https://dnoneill.github.io/test-websockets/dist/js/iiif-annotation.js"></script>
 <link rel="stylesheet" type="text/css" href="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.css">
     </head>
     <body>        
