--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="https://dnoneill.github.io/test-websockets/dist/js/iiif-annotation.js"></script>
-<link rel="stylesheet" type="text/css" href="https://ncsu-libraries.github.io/iiif-annotation/dist/iiif-annotation.css">
+        <script src="https://dnoneill.github.io/test-websockets/iiif-annotation.js"></script>
+<link rel="stylesheet" type="text/css" href="https://dnoneill.github.io/test-websockets/iiif-annotation.css">
     </head>
     <body>        
     
